Fixed some templates.

--- a/ProperTea.Templates.SimpleService/ProperTea.ServiceName/appsettings.json
+++ b/ProperTea.Templates.SimpleService/ProperTea.ServiceName/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "Authentication": {
     "Authority": "https://your-identity-provider.com",
     "Audience": "properTea-landlord-bff",
