--- a/ProperTea.Templates.VerticalService/src/ProperTea.ServiceName.Api/appsettings.json
+++ b/ProperTea.Templates.VerticalService/src/ProperTea.ServiceName.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "Authority": "https://your-identity-provider.com",
+    "Audience": "properTea-landlord-bff",
+    "SecretKey": "your-development-secret-key-here-min-32-chars"
+  },
   "AllowedHosts": "*"
 }
